added basic html structure

--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>I'mma World Clock</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <h1>World Clock</h1>
-    <footer>This Project was coded by Immaculater Bayero and is <a href="https://github.com/Immaculater/world-clock" target="_blank">open sourced on GitHub</a></footer>
-    <script src="javaScript/app.js"></script>
-</body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a City</option>
+        <option value="new-york">New York</option>
+        <option value="tokyo">Tokyo</option>
+        <option value="paris">Paris</option>
+      </select>
+
+      <div class="cities">
+        <h2>Lagos 🇳🇬</h2>
+        <div class="date">september 7th 2024</div>
+        <div class="time">1:43:12 AM</div>
+      </div>
+
+      <div class="cities">
+        <h2>Sydney 🇦🇺</h2>
+        <div class="date">september 7th 2024</div>
+        <div class="time">1:43:12 AM</div>
+      </div>
+
+      <footer>
+        This Project was coded by Immaculater Bayero and is
+        <a href="https://github.com/Immaculater/world-clock" target="_blank"
+          >open sourced on GitHub</a
+        >
+      </footer>
+      <script src="javaScript/app.js"></script>
+    </div>
+  </body>
 </html>
