added basic css

--- a/index.html
+++ b/index.html
@@ -18,19 +18,22 @@
       </select>
 
       <div class="cities">
-        <h2>Lagos 🇳🇬</h2>
-        <div class="date">september 7th 2024</div>
-        <div class="time">1:43:12 AM</div>
+        <div>
+          <h2>Lagos 🇳🇬</h2>
+          <div class="date">september 7th 2024</div>
+        </div>
+        <div class="time">1:43:12 <small>AM</small></div>
       </div>
-
       <div class="cities">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">september 7th 2024</div>
-        <div class="time">1:43:12 AM</div>
+        <div>
+          <h2>Sydney 🇦🇺</h2>
+          <div class="date">september 7th 2024</div>
+        </div>
+        <div class="time">1:43:12 <small>AM</small></div>
       </div>
 
       <footer>
-        This Project was coded by Immaculater Bayero and is
+        This Project was coded by <strong>Immaculater Bayero</strong> and is
         <a href="https://github.com/Immaculater/world-clock" target="_blank"
           >open sourced on GitHub</a
         >
