--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>I'mma World Clock</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -17,14 +19,14 @@
         <option value="paris">Paris</option>
       </select>
 
-      <div class="cities">
+      <div class="cities" id="lagos">
         <div>
           <h2>Lagos 🇳🇬</h2>
-          <div class="date">september 7th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:43:12 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="cities">
+      <div class="cities" id="sydney">
         <div>
           <h2>Sydney 🇦🇺</h2>
           <div class="date">september 7th 2024</div>
