plus-add-on-final-project

--- a/index.html
+++ b/index.html
@@ -21,20 +21,27 @@
       </select>
 
       <div id="cities">
-      <div class="city" id="lagos">
-        <div>
-          <h2>Lagos 🇳🇬</h2>
-          <div class="date"></div>
+        <div class="city" id="lagos">
+          <div>
+            <h2>Lagos 🇳🇬</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="sydney">
-        <div>
-          <h2>Sydney 🇦🇺</h2>
-          <div class="date">september 7th 2024</div>
+        <div class="city" id="sydney">
+          <div>
+            <h2>Sydney 🇦🇺</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">1:43:12 <small>AM</small></div>
-      </div>
+        <div class="city" id="phoenix">
+          <div>
+            <h2>Phoenix 🏴󠁵󠁳󠁡󠁺󠁿</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
 
       <footer>
